--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,65 +1,251 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+<Layout title="Bienvenido a JS">
+	<div class="pl-4 text-sm breadcrumbs">
+		<ul>
+			<li><a href="/">Inicio</a></li>
 		</ul>
+	</div>
+
+	<main>
+		<h2 class="text-left text-4xl text-bold mt-3 mb-3">JS Exercise</h2>
+		<div
+			class="hero min-h-screen"
+			style="background-image: url(/js.jpg); shadow-xl	"
+		>
+			<div class="hero-overlay bg-opacity-60"></div>
+			<div class="hero-content text-center text-neutral-content">
+				<div class="max-w-md">
+					<h1
+						class="mb-5 text-5xl font-bold drop-shadow-xl text-yellow-400"
+					>
+						Bienvenido
+					</h1>
+					<p
+						class="mb-5 drop-shadow-md secondary-color text-slate-100"
+					>
+						Mejora tu logica de programacion , con ejercicios del
+						lenguaje que hace que la web funcione.
+					</p>
+					<button class="btn btn-primary">Comienza</button>
+				</div>
+			</div>
+		</div>
+
+		<!--  -->
+
+		<div class="stats shadow grid auto-rows-auto drop-shadow-md mt-5">
+			<div class="stat place-items-center">
+				<div class="stat-title">Ejercicios</div>
+				<div class="stat-value">+52</div>
+				<div class="stat-desc">mejora tu logica de programacion</div>
+			</div>
+
+			<div class="stat place-items-center">
+				<div class="stat-title">Conceptos</div>
+				<div class="stat-value text-yellow-400">10</div>
+				<div class="stat-desc text-yellow-400">
+					Aprende conceptos importantes
+				</div>
+			</div>
+
+			<div class="stat place-items-center">
+				<div class="stat-title">Proyectos</div>
+				<div class="stat-value">5</div>
+				<div class="stat-desc">Crea proyectos</div>
+			</div>
+		</div>
+
+
+		<h2 class=" text-center mt-14 font-bold text-4xl " >Nuestros alumnos</h2>
+		<div class="carousel w-full mt-14 mb-10  shadow-2xl">
+			<div id="slide1" class="carousel-item relative w-full">
+				<div class="card card-side bg-base-100 shadow-xl h-48">
+					<figure class="w-1/4">
+						<img
+							src="https://th.bing.com/th/id/OIP.XMJapQiW0_Q0aIWNxjIxoAHaLH?rs=1&pid=ImgDetMain"
+							alt="Movie"
+						/>
+					</figure>
+					<div class="card-body">
+						<h2 class="card-title">Benjamin Cruz</h2>
+						<p>
+							Pude aprende de una forma sin igual, ademas de
+							mejorar conseguir un empleo como Front-end
+						</p>
+						<div class="card-actions justify-end">
+							<div class="rating">
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div
+					class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+				>
+					<a href="#slide4" class="btn btn-circle">❮</a>
+					<a href="#slide2" class="btn btn-circle">❯</a>
+				</div>
+			</div>
+			<div id="slide2" class="carousel-item relative w-full">
+				<div class="card card-side bg-base-100 shadow-xl h-48">
+					<figure class="w-1/4">
+						<img
+							src="https://th.bing.com/th/id/OIP.jAEnONxlpsGr8oF6yPHI9QHaHZ?rs=1&pid=ImgDetMain"
+							alt="Movie"
+						/>
+					</figure>
+					<div class="card-body">
+						<h2 class="card-title">Jesus Manuel</h2>
+						<p>
+							Me ayudo a comprender mejor como pensar como
+							programador, ademas de darme una nueva habilidad
+						</p>
+						<div class="card-actions justify-end">
+							<div class="rating">
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+								<input
+									type="radio"
+									name="rating-2"
+									class="mask mask-star-2 bg-orange-400"
+									checked
+								/>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div
+					class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+				>
+					<a href="#slide1" class="btn btn-circle">❮</a>
+					<a href="#slide3" class="btn btn-circle">❯</a>
+				</div>
+			</div>
+			<div id="slide3" class="carousel-item relative w-full">
+				<div class="card card-side bg-base-100 shadow-xl  h-48">
+					<figure class="w-1/4" ><img  src="https://i.pinimg.com/originals/e3/7e/0e/e37e0e25686c2139b281a57a5b4906f2.jpg" alt="Movie"/></figure>
+					<div class="card-body">
+					  <h2 class="card-title">Marshall santos</h2>
+					  <p>Aprendi una nueva habilidad , la cual me es util, gracias a la gran cantidad de ejercicios </p>
+					  <div class="card-actions justify-end">
+						<div class="rating">
+							<input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+							<input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+							<input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+							<input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  checked/>
+							<input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+						  </div>
+					  </div>
+					</div>
+				  </div>
+		
+				<div
+					class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+				>
+					<a href="#slide2" class="btn btn-circle">❮</a>
+					<a href="#slide4" class="btn btn-circle">❯</a>
+				</div>
+			</div>
+		</div>
+
+
+
+		<h2 class ="text-center font-bold mb-3 text-2xl">F.A.Q</h2>
+		<div class="collapse collapse-plus bg-base-200 ">
+			<input type="radio" name="my-accordion-3" checked="checked" /> 
+			<div class="collapse-title text-xl font-medium text-amber-600	">
+			  Fundamentos solidos
+			</div>
+			<div class="collapse-content"> 
+			  <p class="p-2">Aprenderás no solo a programar con JavaScript:
+				<ul class="list-disc pl-10">
+					<li> cómo resolver problemas.</li>
+					<li>crear algoritmos</li>
+					<li>manejar el flujo de control.</li>
+				</ul>
+			
+				   </p>
+				   
+			</div>
+		  </div>
+		  <div class="collapse collapse-plus bg-base-200">
+			<input type="radio" name="my-accordion-3" /> 
+			<div class="collapse-title text-xl font-medium text-amber-600">
+			  Siempre actualizado
+			</div>
+			<div class="collapse-content"> 
+			  <p class="pl-8">Los cursos se actualizan constantemente para mantenerse al día con las diversas características del lenguaje.</p>
+			</div>
+		  </div>
+		  <div class="collapse collapse-plus bg-base-200">
+			<input type="radio" name="my-accordion-3" /> 
+			<div class="collapse-title text-xl font-medium text-amber-600">
+				Mentoria Experta
+			</div>
+			<div class="collapse-content"> 
+			  <p class="pl-8">Si surgen dudas, tendrás la oportunidad de consultar con un profesor experimentado en la industria para obtener orientación y claridad.</p>
+			</div>
+		  </div>
+		<p class="mt-14 text-center font-bold text-4xl p-4">
+			
+"Únete a nuestra comunidad y sumérgete en la fascinante experiencia de programar. ¡Suscríbete hoy mismo, sin dudarlo más!"
+		</p>
 	</main>
 </Layout>
 
@@ -67,57 +253,17 @@ import Card from '../components/Card.astro';
 	main {
 		margin: auto;
 		padding: 1rem;
-		width: 800px;
 		max-width: calc(100% - 2rem);
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
+
 	h1 {
 		font-size: 4rem;
 		font-weight: 700;
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
 	}
 </style>
