fr_añadiendo ruta

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,9 @@ const { title } = Astro.props;
 	</head>
 
 	<div class="navbar bg-base-300 ">
-		<a class="btn btn-ghost text-xl" href="/">JS-exercise</a>
-		<a class="btn btn-ghost text-xl" href="contact">Contacto</a>
-		<a class="btn btn-ghost text-xl" href="nosotros"> Nosotros</a>
+		<a class="btn btn-ghost text-xl" href="/land-astro-page/">JS-exercise</a>
+		<a class="btn btn-ghost text-xl" href="/land-astro-page/contact">Contacto</a>
+		<a class="btn btn-ghost text-xl" href="/land-astro-page/nosotros"> Nosotros</a>
 
 
 	</div>
