--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,8 +5,8 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Contacto">
     <div class="pl-4 text-sm breadcrumbs">
 		<ul>
-		  <li><a href="/">Inicio</a></li> 
-          <li><a href="contact">Contacto</a></li> 
+		  <li><a href="/land-astro-page/">Inicio</a></li> 
+          <li><a href="/land-astro-page/contact">Contacto</a></li> 
 		 
 		</ul>
 	  </div>
