--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 	<div class="pl-4 text-sm breadcrumbs">
 		<ul>
 			<li><a href="/">Inicio</a></li>
-			<li><a href="nosotros">Nosotros</a></li>
+			<li><a href="/land-astro-page/nosotros">Nosotros</a></li>
 		</ul>
 	</div>
 	<main>
