--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Bienvenido a JS">
 	<div class="pl-4 text-sm breadcrumbs">
 		<ul>
-			<li><a href="/">Inicio</a></li>
+			<li><a href="/land-astro-page/">Inicio</a></li>
 		</ul>
 	</div>
 
