--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
 		<h2 class="text-left text-4xl text-bold mt-3 mb-3">JS Exercise</h2>
 		<div
 			class="hero min-h-screen"
-			style="background-image: url(/js.jpg); shadow-xl	"
+			style="background-image: url(https://wallpapercave.com/wp/wp5422452.jpg); shadow-xl	"
 		>
 			<div class="hero-overlay bg-opacity-60"></div>
 			<div class="hero-content text-center text-neutral-content">
