--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Nosotros">
 	<div class="pl-4 text-sm breadcrumbs">
 		<ul>
-			<li><a href="/">Inicio</a></li>
+			<li><a href="/land-astro-page/">Inicio</a></li>
 			<li><a href="/land-astro-page/nosotros">Nosotros</a></li>
 		</ul>
 	</div>
